--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/logging"]
 	path = vendor/logging
 	url = git@github.com:Erty-Gamedev/logging.git
+[submodule "vendor/doctest"]
+	path = vendor/doctest
+	url = git@github.com:doctest/doctest.git
