Make target output dir relative to project source dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,9 +31,9 @@ add_executable(${MER_PROJECT_NAME}
 )
 
 set_target_properties(${MER_PROJECT_NAME} PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY "bin/debug"
-    RUNTIME_OUTPUT_DIRECTORY_DEBUG "bin/debug"
-    RUNTIME_OUTPUT_DIRECTORY_RELEASE "bin/release"
+    RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin/debug"
+    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/bin/debug"
+    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/bin/release"
 )
 
 include_directories(tests
